Fix logo on mobile

--- a/Front-End/src/components/Home/index.scss
+++ b/Front-End/src/components/Home/index.scss
@@ -87,6 +87,7 @@ $navbar-color: #2745b0;
 
     .home-img {
       width: 20%;
+      height: auto;
     }
 
     .home-text {
@@ -117,6 +118,7 @@ $navbar-color: #2745b0;
 
     .home-img {
       width: 25%;
+      height: auto;
     }
 
     .home-text {
